-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b28
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8056359 | emb-9 | Tobias Hartmann | P2 | Resolved | Fixed | b28 |
10669 Allocate === 10582 10579 10667 8 1 ( 996 6277 20 1 6249 20 27 37 46 55 64 73 82 91 100 109 118 127 136 145 154 163 172 181 190 199 208 217 226 235 244 253 262 271 280 289 298 307 316 325 334 343 352 361 370 379 6235 6237 6239 6241 6243 6245 6247 6273 1 6273 6235 ) [[ 10670 10671 10672 10679 10680 10681 ]] rawptr:NotNull ( int:>=0, java/lang/Object:NotNull *, bool, top ) XSAttributeChecker::<clinit> @ bci:1999 !jvms: XSAttributeChecker::<clinit> @ bci:1999
# Internal Error (/opt/jprt/T/P1/204224.vkozlov/s/src/share/vm/opto/phaseX.cpp:943), pid=12642, tid=140496250750720
# assert(false) failed: modified node is not on IGVN._worklist
Stack: [0x00007fc7d50e4000,0x00007fc7d51e5000], sp=0x00007fc7d51df9c0, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x10766cc] VMError::report_and_die()+0x15c;; VMError::report_and_die()+0x15c
V [libjvm.so+0x738f3b] report_vm_error(char const*, int, char const*, char const*)+0x7b;; report_vm_error(char const*, int, char const*, char const*)+0x7b
V [libjvm.so+0xe51998] PhaseIterGVN::init_verifyPhaseIterGVN()+0x238;; PhaseIterGVN::init_verifyPhaseIterGVN()+0x238
V [libjvm.so+0xe5268f] PhaseIterGVN::optimize()+0x1f;; PhaseIterGVN::optimize()+0x1f
V [libjvm.so+0x6b2497] Compile::Optimize()+0xa27;; Compile::Optimize()+0xa27
V [libjvm.so+0x6b3c04] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12b4;; Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12b4
V [libjvm.so+0x585d6f] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x28f;; C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x28f
V [libjvm.so+0x6bf5f6] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x816;; CompileBroker::invoke_compiler_on_method(CompileTask*)+0x816
V [libjvm.so+0x6c0828] CompileBroker::compiler_thread_loop()+0x528;; CompileBroker::compiler_thread_loop()+0x528
V [libjvm.so+0xff6b74] JavaThread::thread_main_inner()+0x1d4;; JavaThread::thread_main_inner()+0x1d4
V [libjvm.so+0xff6ea2] JavaThread::run()+0x2a2;; JavaThread::run()+0x2a2
V [libjvm.so+0xdce5f2] java_start(Thread*)+0xf2;; java_start(Thread*)+0xf2
C [libpthread.so.0+0x7851]
ILW=HML=P2
# Internal Error (/opt/jprt/T/P1/204224.vkozlov/s/src/share/vm/opto/phaseX.cpp:943), pid=12642, tid=140496250750720
# assert(false) failed: modified node is not on IGVN._worklist
Stack: [0x00007fc7d50e4000,0x00007fc7d51e5000], sp=0x00007fc7d51df9c0, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x10766cc] VMError::report_and_die()+0x15c;; VMError::report_and_die()+0x15c
V [libjvm.so+0x738f3b] report_vm_error(char const*, int, char const*, char const*)+0x7b;; report_vm_error(char const*, int, char const*, char const*)+0x7b
V [libjvm.so+0xe51998] PhaseIterGVN::init_verifyPhaseIterGVN()+0x238;; PhaseIterGVN::init_verifyPhaseIterGVN()+0x238
V [libjvm.so+0xe5268f] PhaseIterGVN::optimize()+0x1f;; PhaseIterGVN::optimize()+0x1f
V [libjvm.so+0x6b2497] Compile::Optimize()+0xa27;; Compile::Optimize()+0xa27
V [libjvm.so+0x6b3c04] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12b4;; Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12b4
V [libjvm.so+0x585d6f] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x28f;; C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x28f
V [libjvm.so+0x6bf5f6] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x816;; CompileBroker::invoke_compiler_on_method(CompileTask*)+0x816
V [libjvm.so+0x6c0828] CompileBroker::compiler_thread_loop()+0x528;; CompileBroker::compiler_thread_loop()+0x528
V [libjvm.so+0xff6b74] JavaThread::thread_main_inner()+0x1d4;; JavaThread::thread_main_inner()+0x1d4
V [libjvm.so+0xff6ea2] JavaThread::run()+0x2a2;; JavaThread::run()+0x2a2
V [libjvm.so+0xdce5f2] java_start(Thread*)+0xf2;; java_start(Thread*)+0xf2
C [libpthread.so.0+0x7851]
ILW=HML=P2
- backported by
-
JDK-8056359 Crashes with assert "modified node is not on IGVN._worklist"
-
- Resolved
-
- relates to
-
JDK-8040213 C2 does not put all modified nodes on IGVN worklist
-
- Resolved
-
-
JDK-8145169 "Out of Memory Error (allocation.cpp:390)" in compiler thread
-
- Closed
-