8054081: Crashes with assert "modified node is not on IGVN._worklist"

Modified safepoint nodes are not added to the IGVN worklist by 'PhaseMacroExpand::scalar_replacement()'

Reviewed-by: kvn, roland